crates/oxc_angular_compiler/tests/snapshots/partial_injectable_test__injectable_with_use_existing.snap
---
source: crates/oxc_angular_compiler/tests/partial_injectable_test.rs
expression: js
---
i0.ɵɵngDeclareInjectable({minVersion:"12.0.0",version:"0.0.0-PLACEHOLDER",ngImport:i0,
    type:AliasToken,providedIn:"root",useExisting:RealToken})
