crates/oxc_angular_compiler/tests/snapshots/partial_injectable_test__simple_root_injectable.snap
---
source: crates/oxc_angular_compiler/tests/partial_injectable_test.rs
expression: emit(&expr)
---
i0.ɵɵngDeclareInjectable({minVersion:"12.0.0",version:"0.0.0-PLACEHOLDER",ngImport:i0,
    type:MyService,providedIn:"root"})
